Initial commit and first essay

--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,35 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
+  margin: 0 5rem 0 5rem;
+  padding: 0 5rem 0 5rem;
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-bottom-left-radius: 5rem;
+  border-bottom-right-radius: 5rem;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+
+  margin: 10rem 0 0 0;
+
+  font-size: 3rem;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+
+  margin: 7.5vw;
+
+  font-size: 2rem;
+
+  text-align: left;
+
 }
