:lipstick: style adjustments re: spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  margin: 0 5rem 0 5rem;
+  margin: 0 auto;
   padding: 0 5rem 0 5rem;
   background-color: #282c34;
   min-height: 20rem;
@@ -13,8 +13,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  border-bottom-left-radius: 5rem;
-  border-bottom-right-radius: 5rem;
 }
 
 h2 {
@@ -44,5 +42,23 @@ footer {
   padding: 5rem;
 
   color: #CCCCCC;
+
+}
+
+@media only screen and (min-width: 800px) {
+
+  h2 {
+
+    margin: 100px 0 0 0;
+
+    font-size: 30px;
+
+  }
+
+  p {
+
+    margin: 75px;
+
+  }
 
 }
